@@ -1,0 +1,2 @@
+mfill <-
+function(x) sum(x>0) / prod(dim(x))
